--- a/scss/styles.scss
+++ b/scss/styles.scss
@@ -17,14 +17,36 @@
     box-sizing: border-box;
     font-family: helvetica, sans-serif;
 }
-
-
+.texto-centrado{
+    display: block;
+    text-align: center;
+}
+.tu-compra{
+    display: flex;
+    flex-direction: row;
+    margin: 0 40px;
+}
+.ppc3{
+    display: flex;
+    flex-direction: column;
+    padding: 0 100px 0 30px;
+    justify-content: space-evenly;
+    font-size: 30px;
+}
 .container {
     width: 90%;
     max-width: 1200px;
     margin: 0 auto;
     overflow: hidden;
-    padding: 100px 0;
+    padding: 100px 0 0px 0;
+    height: auto;
+}
+.conteiner {
+    width: 90%;
+    max-width: 1200px;
+    margin: 0 auto;
+    overflow: hidden;
+    padding: 100px 0 0px 0;
     height: auto;
 }
 
@@ -81,7 +103,7 @@
     color: var(--gold1);
 }
 
-.main__index{
+.main__index {
     background: linear-gradient(180deg, var(--black2) 0%, var(--black1) 100%);
     padding-bottom: 30px;
 }
@@ -137,6 +159,16 @@
     box-shadow: var(--shadow) var(--color_shadow);
     border-radius: 6px;
 }
+/* TOTAL*/
+.total{
+    display: flex;
+    justify-content: center;
+    flex-direction: row;
+    margin: 39px;
+}
+
+
+
 
 /* services */
 .services {
@@ -184,10 +216,11 @@
 }
 
 .card__img {
-    width: 95%;
-    height: 200px;
+    display:flex;
+    margin: 0 auto;
+    width: 80%;
     object-fit: cover;
-    border-radius: 10px 0 0 10px;
+    border-radius: 10px;
 }
 
 .cards__text {
@@ -204,9 +237,11 @@
 }
 
 .card__title {
+    text-align: center;
     font-size: 40px;
     color: #fff;
-    margin-bottom: 8px;
+    margin: 0 auto;
+    padding: 5px;
 }
 
 .card__copy {
@@ -216,12 +251,13 @@
 
 .card__button {
     display: block;
+    margin: 0 auto;
     background: linear-gradient(180deg, #F7CE90 0%, #F4BD76 100%);
     border-radius: 6px;
     text-decoration: none;
-    width: 100%;
+    width: 65%;
     color: var(--black1);
-    font-weight: 700;
+    font-weight: 800;
     text-align: center;
     padding: 12px 0;
 }
@@ -437,19 +473,21 @@
     cursor: pointer;
 }
 
-fieldset{
+fieldset {
     border-style: none;
-    .list__staff{
+
+    .list__staff {
         list-style: none;
         text-align: center;
         margin: 5px;
         padding: 10px;
-        li{
+
+        li {
             margin: 7px;
         }
     }
 }
-    
+
 .footer {
     color: var(--gold2);
     padding: 20px;
@@ -533,58 +571,68 @@ fieldset{
     display: flex;
     color: var(--black2);
 }
+
 .socialmedia__icon {
     font-size: 18px;
     margin-right: 30px;
     display: inline-block;
 }
+
 .socialmedia__legend {
     color: var(--black2);
     margin-right: 16px;
 }
+
 .contact {
     display: flex;
     width: 100%;
     flex-wrap: wrap;
     color: #fff;
 }
+
 .item__contact {
     width: 25%;
     padding: 60px 0;
     text-align: center;
     background: linear-gradient(180deg, var(--black2) 0%, var(--black1) 100%);
 }
+
 .item__contact--gold {
     background: linear-gradient(180deg, #F7CE90 0%, #F4BD76 100%);
     color: var(--black1);
 }
+
 .contact__icon {
     font-size: 14px;
     color: var(--gold1);
     line-height: 20px;
     margin-right: 4px;
 }
+
 .contact__icon--modifier {
     color: var(--black1);
 }
+
 .contact__title {
     font-size: 16px;
     line-height: 20px;
 }
-.email{
+
+.email {
     background-color: var(--gray);
     padding: 50px 100px;
 }
 
 /*BOTON GO UP*/
-.go-top-container{
+.go-top-container {
     position: fixed;
     bottom: 4rem;
     right: 4rem;
     width: 6.6 vrem;
     height: 6.6 vrem;
     z-index: -1;
-    .go-top-button{
+
+    .go-top-button {
         width: 0rem;
         height: 0rem;
         background: var(--gold1);
@@ -598,7 +646,7 @@ fieldset{
     }
 }
 
-i{
+i {
     position: absolute;
     font-size: 1.7rem;
     top: 48%;
@@ -607,98 +655,376 @@ i{
     color: black;
     transition: .2s;
 }
-.show .go-top-button{
+
+.show .go-top-button {
     animation: popup .3s ease-in-out;
     width: 3.5rem;
     height: 3.5rem;
     z-index: 11;
 }
-.show{
+
+.show {
     z-index: 12;
 }
-.show i{
+
+.show i {
     transform: translate(-50%, -50%) scale(1);
 }
 
-@keyframes popup{
-    0%{
+@keyframes popup {
+    0% {
         width: 0rem;
         height: 0rem;
     }
-    50%{
+
+    50% {
         width: 6rem;
         height: 6rem;
     }
-    100%{
+
+    100% {
         width: 3.5rem;
         height: 3.5rem;
     }
 }
 
+/*TIENDA*/
+.item {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    width: 20rem;
+    height: 30rem;
+    padding: 30px 0;
+    overflow: hidden;
+    background: linear-gradient(180deg, var(--black2) 0%, var(--black1) 100%);
+    border-radius: 10px;
+    position: relative;
+    text-align: right;
+    margin-bottom: 60px;
+    box-shadow: 0 0 6px var(--color_shadow);
+}
+
+.item-title {
+    text-align: center;
+    font-size: 26px;
+    color: #fff;
+    margin: 0 auto;
+    padding: 15px;
+}
+
+.item-image {
+    display: flex;
+    margin: 0 auto;
+    max-width: 15rem;
+    object-fit: cover;
+    border-radius: 10px;
+}
+
+
+.item-details {
+    display: block;
+    justify-content:center;
+    align-items: center;
+    margin:0px 15px;
+}
+
+.item-details>.item-price {
+    font-size: 1.5rem;
+    color: var(--gold1);
+    margin: 0 auto;
+    display: flex;
+    justify-content: center;
+    margin-bottom: 14px;
+}
+
+/* ? SHOPPING CART */
+.shopping-cart-items {
+    padding: 20px 0px;
+    display: flex;
+    width: 150px;
+    div{
+        margin: 20px;
+    }
+}
+
+.shopping-cart-header {
+    border-bottom: 1px solid #ccc;
+}
+
+.shopping-cart-image {
+    max-width: 80px;
+    border-radius: 20px;
+}
+
+.shopping-cart-quantity-input {
+    max-width: 45px;
+    border: 1px solid #ccc;
+    border-radius: 5px;
+    background: #eee;
+    padding: 5px;
+}
+
+.shopping-cart-total {
+    min-height: 96px;
+}
+
+
 
 /*MEDIA QUERYS*/
 
 @media (min-width: 701px) and (max-width: 900px) {
-    .mockup { width: 600px; height: auto;}
-    .title {font-size: 50px;}
-    .copy {font-size: 22px;}
-    .cta {padding: 11px 20px; display: block; margin: 15px auto;}
-    .container-cards {justify-content: space-evenly;}
-    .services .card {width: 45%;}
-    .background {width: 52%;}
-    .card {width: 42%;}
-    .testimony-container {justify-content: space-evenly;}
-    .testimony__card {width: 45%;}
-    .check__item {width: 45%; margin-bottom: 35px;}
-    .newsletter {width: 80%;}
-    .download {width: 100%;}
-    .download__app {justify-content: space-between;}
-    .download__item { width: 45%;}
-    .get-email {width: 100%;margin-bottom: 40px;}
-    .socialmedia__icon {font-size: 18px;}
-    .socialmedia__legend {font-size: 18px;}
+    .mockup {
+        width: 600px;
+        height: auto;
+    }
+
+    .title {
+        font-size: 50px;
+    }
+
+    .copy {
+        font-size: 22px;
+    }
+
+    .cta {
+        padding: 11px 20px;
+        display: block;
+        margin: 15px auto;
+    }
+
+    .container-cards {
+        justify-content: space-evenly;
+    }
+
+    .services .card {
+        width: 45%;
+    }
+
+    .background {
+        width: 52%;
+    }
+
+    .card {
+        width: 42%;
+    }
+
+    .testimony-container {
+        justify-content: space-evenly;
+    }
+
+    .testimony__card {
+        width: 45%;
+    }
+
+    .check__item {
+        width: 45%;
+        margin-bottom: 35px;
+    }
+
+    .newsletter {
+        width: 80%;
+    }
+
+    .download {
+        width: 100%;
+    }
+
+    .download__app {
+        justify-content: space-between;
+    }
+
+    .download__item {
+        width: 45%;
+    }
+
+    .get-email {
+        width: 100%;
+        margin-bottom: 40px;
+    }
+
+    .socialmedia__icon {
+        font-size: 18px;
+    }
+
+    .socialmedia__legend {
+        font-size: 18px;
+    }
 }
 
 @media (min-width: 501px) and (max-width: 700px) {
-    main .container, footer .container { padding: 60px 0;}
-    .nav__container {flex-wrap: wrap; flex-direction: column; justify-content: space-evenly;}
-    .nav__hero {height: auto;}
-    .logo {padding: 15px 0;text-align: center;}
-    .links {padding-bottom: 10px;text-align: center;}
-    .link {padding: 7px 10px;}
-    .hero__main { flex-direction: column-reverse; justify-content: flex-end; min-height: 70px;height: auto;padding: 30px 0;}
-    .hero__textos {width: 100%;text-align: center;}
-    .mockup {width: 60%;margin-bottom: 20px;}
-    .title {font-size: 35px;}
-    .copy {font-size: 20px;}
-    .subtitle {font-size: 35px;text-align: center;}
-    .copy__section {font-size: 20px;text-align: center;}
-    .services .card {width: 80%;}
-    .check__item {width: 100%; border: none;padding: none;justify-content: center;}
-    .container-bg {justify-content: space-evenly;}
-    .card {margin-bottom: 40px;width: 65%;}
-    .card__title {font-size: 35px;}
-    .card__button {width: 100%;}
-    .background {width: 65%;margin-bottom: 40px;}
-    .background__copy {display: none;}
-    .testimony__card {width: 65%;}
-    .testimony__name {font-size: 20px;}
-    .container--modifier {width: 80%;}
-    .item__contact {width: 100%;padding: 30px 0;}
+
+    main .container,
+    footer .container {
+        padding: 60px 0;
+    }
+
+    .nav__container {
+        flex-wrap: wrap;
+        flex-direction: column;
+        justify-content: space-evenly;
+    }
+
+    .nav__hero {
+        height: auto;
+    }
+
+    .logo {
+        padding: 15px 0;
+        text-align: center;
+    }
+
+    .links {
+        padding-bottom: 10px;
+        text-align: center;
+    }
+
+    .link {
+        padding: 7px 10px;
+    }
+
+    .hero__main {
+        flex-direction: column-reverse;
+        justify-content: flex-end;
+        min-height: 70px;
+        height: auto;
+        padding: 30px 0;
+    }
+
+    .hero__textos {
+        width: 100%;
+        text-align: center;
+    }
+
+    .mockup {
+        width: 60%;
+        margin-bottom: 20px;
+    }
+
+    .title {
+        font-size: 35px;
+    }
+
+    .copy {
+        font-size: 20px;
+    }
+
+    .subtitle {
+        font-size: 35px;
+        text-align: center;
+    }
+
+    .copy__section {
+        font-size: 20px;
+        text-align: center;
+    }
+
+    .services .card {
+        width: 80%;
+    }
+
+    .check__item {
+        width: 100%;
+        border: none;
+        padding: none;
+        justify-content: center;
+    }
+
+    .container-bg {
+        justify-content: space-evenly;
+    }
+
+    .card {
+        margin-bottom: 40px;
+        width: 65%;
+    }
+
+    .card__title {
+        font-size: 35px;
+    }
+
+    .background {
+        width: 65%;
+        margin-bottom: 40px;
+    }
+
+    .background__copy {
+        display: none;
+    }
+
+    .testimony__card {
+        width: 65%;
+    }
+
+    .testimony__name {
+        font-size: 20px;
+    }
+
+    .container--modifier {
+        width: 80%;
+    }
+
+    .item__contact {
+        width: 100%;
+        padding: 30px 0;
+    }
 }
 
 @media screen and (max-width: 500px) {
-    .mockup {width: 80%;margin-bottom: 15px;}
-    .services .card {width: 95%;}
-    .card {width: 95%;}
-    .background {width: 95%;}
-    .testimony__card {width: 95%;}
-    .testimony__history {font-size: 20px;}
-    .container--modifier {width: 90%;}
-    .newsletter {width: 100%;display: none;}
-    .newsletter--modifier {display: block;}
-    .check__item {width: 100%; border: none;padding: none;justify-content: center;}
-    .download__item {width: 49%;}
-    .download__title {font-size: 16px;}
-    .download__logo {font-size: 30px;}
+    .mockup {
+        width: 80%;
+        margin-bottom: 15px;
+    }
+
+    .services .card {
+        width: 95%;
+    }
+
+    .card {
+        width: 95%;
+    }
+
+    .background {
+        width: 95%;
+    }
+
+    .testimony__card {
+        width: 95%;
+    }
+
+    .testimony__history {
+        font-size: 20px;
+    }
+
+    .container--modifier {
+        width: 90%;
+    }
+
+    .newsletter {
+        width: 100%;
+        display: none;
+    }
+
+    .newsletter--modifier {
+        display: block;
+    }
+
+    .check__item {
+        width: 100%;
+        border: none;
+        padding: none;
+        justify-content: center;
+    }
+
+    .download__item {
+        width: 49%;
+    }
+
+    .download__title {
+        font-size: 16px;
+    }
+
+    .download__logo {
+        font-size: 30px;
+    }
 }
